--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
   </title>
 </head>
 
-<body class="bg-lightGrey min-h-screen dark:text-white dark:bg-darkModeBg">
+<body class="bg-lightGrey h-screen dark:text-white dark:bg-darkModeBg">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app" class="h-full"></div>
   <!-- built files will be auto injected -->
 </body>
 
